[package]
name = "wc-grab"
description = "Screen shot taker for Way Cooler"
version = "0.3.0"
license = "MIT"
repository = "https://github.com/way-cooler/way-cooler-grab/"
keywords = ["Wayland"]
authors = ["Timidger <APragmaticPlace@gmail.com>"]

[dependencies]
dbus = "0.5.2"
image = "^0.12.3"
clap = "2.22.0"
